fixed errors customer & supplier entity|dto|service classes